--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
     <head>
     	<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
+        <link rel = "icon" href = 
+"https://flask-emo.herokuapp.com/static/images/1.png" 
+        type = "image/x-icon">
     	<title>{{title}}</title>
         <h2>run 1</h2>
     	<p>This is an example of a solid border.</p>
@@ -59,5 +62,10 @@
             This is a heading
         </h1>
         <p>This is a paragraph</p>
+
+        <h2>run 10</h2>
+        <p class="image">
+            This paragraph has a background image.
+        </p>
     </head>
 </html>
