--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,75 +1,52 @@
-p{
-	padding: 10px;
-	border: 5px black;
+ol.lower-alpha{
+	list-style-type: lower-alpha;
 }
 
-p.first {
-	padding: 10px;
-	border-style: solid;
-	border-width: 2px;
-	border-color: blue;
+ul.circle{
+	list-style-type: circle;
+}
+ul.square{
+	list-style-type: square;
 }
 
-p.second {
-	padding: 10px;
-	border-style: solid;
-	border-width: 5px;
-	border-color: #FF6600;
+ul.image{
+	list-style-image: url("http://www.sololearn.com/images/bullet.jpg");
+	list-style-position: inside;
 }
 
-p.third {
-	padding: 10px;
-	border-style: solid;
-	border-width: 2px;
-	border-color: rgb(0, 153, 0);
+table.style {
+	border-collapse:  separate;
+	border-spacing: 20px 40px;
+}
+table.empty{
+	border-collapse: separate;
+	empty-cells: hide;
 }
 
-p.none {border-style: none;}
-p.dotted {border-style: dotted;}
-p.dashed {border-style: dashed;}
-p.double {border-style: double;}
-p.groove {border-style: groove;}
-p.ridge {border-style: ridge;}
-p.inset {border-style: inset;}
-p.outset {border-style: outset;}
-p.hidden {border-style: hidden;}
-
-/*
-div {
-	border: 5px solid green;
-	width: 90px;
-	height: 90px;
+caption{
+	caption-side: bottom;/*top*/
 }
-*/
-div {
-	border: 5px solid green;
+
+table{
+	border-collapse: separate;
 	width: 100%;
-	height: 90px;
+	border: 1px solid gray;
 }
 
-p.first{
-	border: 5px solid green;
-	min-height: 100px;
+td{
+	border: 1px solid gray;
+}
+table.auto{
+	table-layout: auto;
+}
+table.fixed{
+	table-layout: fixed;
 }
 
-p.second{
-	border: 5px solid green;
-	max-width: 100px;
-}
-body{
-	background-color: #C0C0C0;
-	background-image: url("http://www.sololearn.com/uploads/css_logo.png");
-	background-repeat: repeat-y;/*repeat-x*/
-}
-h1{
-	background-color: rgb(135, 206, 235);
-}
-p {
-	background-color: LightGreen;
+a:hover{
+	color: red;
 }
 
-p.image {
-	padding: 30px;
-	background-image: url("http://www.sololearn.com/images/tree.jpg");
-	color: white;
+a:link{
+	text-decoration: none;
 }
