--- a/templates/index.html
+++ b/templates/index.html
@@ -6,66 +6,118 @@
 "https://flask-emo.herokuapp.com/static/images/1.png" 
         type = "image/x-icon">
     	<title>{{title}}</title>
+
+
         <h2>run 1</h2>
-    	<p>This is an example of a solid border.</p>
+        <ol class="lower-alpha">
+            <li>Red</li>
+            <li>Green</li>
+            <li>Blue</li>
+        </ol>
+
+        <ul class="circle">
+            <li>Red</li>
+            <li>Green</li>
+            <li>Blue</li>
+        </ul>
+
+        <ul class="square">
+            <li>Red</li>
+            <li>Green</li>
+            <li>Blue</li>
+        </ul>
+
 
         <h2>run 2</h2>
-        <p class="first">
-            Border width of this paragraph is set to 2px.
-        </p>
-
-        <p class="second">
-            Border width of this paragraph is set to 5px.
-        </p>
+        <p>The following list has list-style-position:<strong>inside</strong>
+        <ul class="image">
+            <li>Red</li>
+            <li>Green</li>
+            <li>Blue</li>
+        </ul>
 
         <h2>run 3</h2>
-        <p class="third">
-            Border color has been created using <strong> RGB values.</strong>
-        </p>
+        <table border="1" class="style">
+            <tr>
+                <td>Red</td>
+                <td>Green</td>
+            </tr>
+            <tr>
+                <td>Blue</td>
+                <td>Yellow</td>
+            </tr>
+        </table>
+        <h2>run 4</h2>
+        <table border="1">
+            <caption>Some of Our Courses</caption>
+            <tr>
+                <th>Course</th>
+                <th>Lessons</th>
+                <th>Quizzes</th>
+            </tr>
+            <tr>
+                <td>C++</td>
+                <td>81</td>
+                <td>363</td>
+            </tr>
+            <tr>
+                <td>JavaScript</td>
+                <td>48</td>
+                <td>144</td>
+            </tr>
+            <tr>
+                <td>CSS</td>
+                <td>70</td>
+                <td>174</td>
+            </tr>
+        </table>
 
         <h2>run 4</h2>
-        <p class="none">This paragraph has no border.</p>
-        <p class="dotted">This is a dotted border.</p>
-        <p class="dashed">This is a dashed border.</p>
-        <p class="double">This is a double border.</p>
-        <p class="groove">This is a grooved border.</p>
-        <p class="ridge">This is a ridge border.</p>
-        <p class="inset">This is an inset border.</p>
-        <p class="outset">This is an outset border.</p>
-        <p class="hidden">This is a hidden border.</p>
+        <table border="1" class="empty">
+            <tr>
+                <td>HTML</td>
+                <td>CSS</td>
+            </tr>
+            <tr>
+                <td>JavaScripts</td>
+                <td></td>
+            </tr>
+        </table>
 
         <h2>run 5</h2>
-        <div>
-            The total width and height of this element is 100px.
-        </div>
-
-        <h2>run 6</h2>
-        <div>
-            The total width of this element is <strong>100%</strong> and the total height is <strong>100px</strong>.
-        </div>
-
-        <h2>run 7</h2>
-        <p class="first">
-            The <stong>minimum height </stong>of this paragraph is set to 100px.
+        <p>
+            Table-layout is set to <strong>auto</strong>
         </p>
 
-        <p class="second">
-            The<strong> maximum width </strong>of this paragraph is set to 100px.
+        <table class="auto">
+          <tr>
+            <td width="10%">500.000.000.000.000</td>
+            <td width="90%">20.000</td>
+          </tr>
+        </table>
+
+        <p>Table-layout is set to <strong>fixed</strong></p>
+        <table class="fixed">
+          <tr>
+            <td width="10%">500.000.000.000.000</td>
+            <td width="90%">20.000</td>
+          </tr>
+        </table>
+        <h2>run 6</h2>
+        <p><a href="http://www.sololearn.com" target="_blank">
+            This link is hovered when we mouse over it.
+            </a>            
+        </p>
+        <h2>run 7</h2>
+        <p>
+            <a href="http://www.sololearn.com" target="_blank">
+                This link has no underline.
+            </a> 
         </p>
 
         <h2>run 8</h2>
-        <p>
-            The background color of this page is set to LightSkyBlue.
-        </p>
-        <h2>run 9</h2>
-        <h1>
-            This is a heading
-        </h1>
-        <p>This is a paragraph</p>
-
-        <h2>run 10</h2>
-        <p class="image">
-            This paragraph has a background image.
-        </p>
+        <span style="cursor:help;">
+            Do you need Help?
+        </span>
     </head>
 </html>
