--- a/templates/index.html
+++ b/templates/index.html
@@ -7,117 +7,63 @@
         type = "image/x-icon">
     	<title>{{title}}</title>
 
-
+        <!--    The display Property   -->
         <h2>run 1</h2>
-        <ol class="lower-alpha">
-            <li>Red</li>
-            <li>Green</li>
-            <li>Blue</li>
-        </ol>
-
-        <ul class="circle">
-            <li>Red</li>
-            <li>Green</li>
-            <li>Blue</li>
-        </ul>
-
-        <ul class="square">
-            <li>Red</li>
-            <li>Green</li>
-            <li>Blue</li>
-        </ul>
-
+        <span>First Paragraph.</span>
+        <span>Second Paragraph.</span>
+        <span>Third Paragraph.</span>
+        <span>Fourth Paragraph.</span>
+        <span>Fifth Paragraph.</span>
 
         <h2>run 2</h2>
-        <p>The following list has list-style-position:<strong>inside</strong>
-        <ul class="image">
-            <li>Red</li>
-            <li>Green</li>
-            <li>Blue</li>
-        </ul>
+        <p class="inline">First Paragraph.</p>
+        <p class="inline">Second Paragraph.</p>
+        <p class="inline">Third Paragraph.</p>
+        <p class="inline">Fourth Paragraph.</p>
+        <p class="inline">Fifth Paragraph.</p>
 
         <h2>run 3</h2>
-        <table border="1" class="style">
-            <tr>
-                <td>Red</td>
-                <td>Green</td>
-            </tr>
-            <tr>
-                <td>Blue</td>
-                <td>Yellow</td>
-            </tr>
-        </table>
-        <h2>run 4</h2>
-        <table border="1">
-            <caption>Some of Our Courses</caption>
-            <tr>
-                <th>Course</th>
-                <th>Lessons</th>
-                <th>Quizzes</th>
-            </tr>
-            <tr>
-                <td>C++</td>
-                <td>81</td>
-                <td>363</td>
-            </tr>
-            <tr>
-                <td>JavaScript</td>
-                <td>48</td>
-                <td>144</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>70</td>
-                <td>174</td>
-            </tr>
-        </table>
+        <h1 id="disnone">This text will not display, as we set the value to none.</h1>
+        <p>Headline of this paragraph is no displayed, as we set the vlaue to none.</p>
 
-        <h2>run 4</h2>
-        <table border="1" class="empty">
-            <tr>
-                <td>HTML</td>
-                <td>CSS</td>
-            </tr>
-            <tr>
-                <td>JavaScripts</td>
-                <td></td>
-            </tr>
-        </table>
-
-        <h2>run 5</h2>
+        <!-- The visibility Property -->
+        <h2> run 1 </h2>
+        <h1>This is a heading</h1>
+        <div id="hiddenvis">
+            This text will not display in browser.
+        </div>
         <p>
-            Table-layout is set to <strong>auto</strong>
+            The space above this paragraph is empty because the visibilty of the div element is set to hidden.
         </p>
 
-        <table class="auto">
-          <tr>
-            <td width="10%">500.000.000.000.000</td>
-            <td width="90%">20.000</td>
-          </tr>
-        </table>
+        <!-- Positioning -->
+        <h2>Run 1</h2>
+        <p>Paragraph with no position.</p>
 
-        <p>Table-layout is set to <strong>fixed</strong></p>
-        <table class="fixed">
-          <tr>
-            <td width="10%">500.000.000.000.000</td>
-            <td width="90%">20.000</td>
-          </tr>
-        </table>
-        <h2>run 6</h2>
-        <p><a href="http://www.sololearn.com" target="_blank">
-            This link is hovered when we mouse over it.
-            </a>            
-        </p>
-        <h2>run 7</h2>
-        <p>
-            <a href="http://www.sololearn.com" target="_blank">
-                This link has no underline.
-            </a> 
-        </p>
+        <p>Paragraph with no position.</p>
 
-        <h2>run 8</h2>
-        <span style="cursor:help;">
-            Do you need Help?
-        </span>
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p class="position_static">This paragraph has a static position.</p>
+
+        <h2>Run 2</h2>
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p>Paragraph with no position.</p>
+
+        <p class="position_fixed">fixed position</p>
+
+        <h2>Run 3</h2>
+        <p class="rp">This is some paragraph with <span class="rp">span </span> inside it. This is some paragraph with <span class="rp">span </span> inside it. This is some paragraph with <span class="rp">span </span> inside it</p>
     </head>
 </html>
