--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,52 +1,43 @@
-ol.lower-alpha{
-	list-style-type: lower-alpha;
+span {
+	display: block;
 }
 
-ul.circle{
-	list-style-type: circle;
-}
-ul.square{
-	list-style-type: square;
+p.inline{
+	display: inline;
 }
 
-ul.image{
-	list-style-image: url("http://www.sololearn.com/images/bullet.jpg");
-	list-style-position: inside;
+#disnone{
+	display: none;
 }
 
-table.style {
-	border-collapse:  separate;
-	border-spacing: 20px 40px;
-}
-table.empty{
-	border-collapse: separate;
-	empty-cells: hide;
+#hiddenvis{
+	visibility: hidden;/*visible*/
 }
 
-caption{
-	caption-side: bottom;/*top*/
-}
-
-table{
-	border-collapse: separate;
-	width: 100%;
-	border: 1px solid gray;
-}
-
-td{
-	border: 1px solid gray;
-}
-table.auto{
-	table-layout: auto;
-}
-table.fixed{
-	table-layout: fixed;
-}
-
-a:hover{
+p.position_static{
+	position: static;
+	top: 30px;
+	right: 5px;
 	color: red;
 }
 
-a:link{
-	text-decoration: none;
+p.position_fixed{
+	position: fixed;
+	top: 30px;
+	right: 5px;
+	color: red;
+}
+
+p.rp{
+	width: 350px;
+	border: 1px black solid;
+	position: fixed;
+}
+
+span.rp{
+	background: green;
+	color: white;
+	position: relative;
+	top: 150px;
+	left: 50px;
 }
