--- a/templates/index.html
+++ b/templates/index.html
@@ -7,63 +7,15 @@
         type = "image/x-icon">
     	<title>{{title}}</title>
 
-        <!--    The display Property   -->
-        <h2>run 1</h2>
-        <span>First Paragraph.</span>
-        <span>Second Paragraph.</span>
-        <span>Third Paragraph.</span>
-        <span>Fourth Paragraph.</span>
-        <span>Fifth Paragraph.</span>
-
-        <h2>run 2</h2>
-        <p class="inline">First Paragraph.</p>
-        <p class="inline">Second Paragraph.</p>
-        <p class="inline">Third Paragraph.</p>
-        <p class="inline">Fourth Paragraph.</p>
-        <p class="inline">Fifth Paragraph.</p>
-
-        <h2>run 3</h2>
-        <h1 id="disnone">This text will not display, as we set the value to none.</h1>
-        <p>Headline of this paragraph is no displayed, as we set the vlaue to none.</p>
-
-        <!-- The visibility Property -->
-        <h2> run 1 </h2>
-        <h1>This is a heading</h1>
-        <div id="hiddenvis">
-            This text will not display in browser.
+        <!-- floating property
+        <div>
+            This text is inside the div element, whic has a blue background color and is floated to the left. We set a specific height and width for the div element, and as you can see, the content cannot fit.
         </div>
-        <p>
-            The space above this paragraph is empty because the visibilty of the div element is set to hidden.
-        </p>
 
-        <!-- Positioning -->
-        <h2>Run 1</h2>
-        <p>Paragraph with no position.</p>
+    -->
+    <!-- z-fold property -->
+        <div class="blue">Blue</div>
+        <div class="red">Red</div>
 
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p class="position_static">This paragraph has a static position.</p>
-
-        <h2>Run 2</h2>
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p>Paragraph with no position.</p>
-
-        <p class="position_fixed">fixed position</p>
-
-        <h2>Run 3</h2>
-        <p class="rp">This is some paragraph with <span class="rp">span </span> inside it. This is some paragraph with <span class="rp">span </span> inside it. This is some paragraph with <span class="rp">span </span> inside it</p>
     </head>
 </html>
