--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,28 @@
         type = "image/x-icon">
     	<title>{{title}}</title>
 
-        <!-- floating property
-        <div>
-            This text is inside the div element, whic has a blue background color and is floated to the left. We set a specific height and width for the div element, and as you can see, the content cannot fit.
+        <!-- css3 round -->
+        <!-- Vendor Prefixes -->
+        <div class="round">
+            Rounded corners.!
         </div>
 
-    -->
-    <!-- z-fold property -->
-        <div class="blue">Blue</div>
-        <div class="red">Red</div>
+        <!--Border radius -->
+        <div class="fillr">
+            Rounded Corners
+        </div>
 
+        <!-- only bottom rounded -->
+        <div class="bottomr">
+            Only Bottom Rounded
+        </div>
+
+        <div class="circle">
+            Circles
+        </div>
+
+        <div class="shady"></div>
+
+        <div class="blur"></div>
     </head>
 </html>
