--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,59 +1,32 @@
-/*Vendor Prefix */
-.round {
-	-moz-border-radius: 24px;
-	border-radius: 24px;
-	border: 1px solid green;
-	width: 200px;
-	padding: 25px;
-
-	/*Firefox	-moz-
-	Safari		-webkit-
-	Chrome		-webkit-
-	Opera 		-o-
-	Internet Explorer -ms
-	*/
+body{
+	background: url("http://www.sololearn.com/images/bg2.jpg");
 }
 
-.fillr {
-	border-radius: 20px;
-	background-color: green;
-	color: white;
-	padding: 50px;
+nav {
+	padding: 50px 0;
+	min-width: 500px;
 }
 
-.bottomr{
-	border-radius: 0 0 20px 20px;
-	background-color: green;
-	color: white;
-	padding: 50px;
+nav ul {
+	background: linear-gradient(90 deg,
+		rgba(255, 255, 255, 0) 0%,
+		rgba(255, 255, 255, 0.2) 25%,
+		rgba(255, 255, 255, 0.2) 75%,
+		rgba(255, 255, 255, 0) 100%);
+
+	box-shadow: 0 0 25px rgba(0, 0, 0, 1.0),
+	inset 0 0 1px rgba(255, 255, 255, 0.6);
 }
 
-.circle{
-	width: 200px;
-	height: 200px;
-	border-radius: 100px;
-	background-color: green;
-	color: white;
+nav ul li {
+	display: inline-block;
 }
 
-.shady{
-	width: 300px;
-	height: 100px;
-	background-color: #9ACD32;
-	box-shadow: 10px 10px #888888;/* horizontal offset, vertical offset */
-}
-
-
-.blur {
-	width: 400px;
-	height: 100px;
-	box-shadow: 10px 10px 5px 5px #888888;
-	background-color: red;
-	/*
-
-	horizontal offset - the shadow will be to the left of the box
-	vertical offset - the shadow will be above the box
-	blur radius - negative values are not allowed
-	spread radius - negative values will cause the shadow to shrink
-	*/
+nav ul li a {
+	padding: 10px;
+	color: #FFFFFF;
+	font-size: 18px;
+	font-family: Arial;
+	text-decoration: none;
+	display: block;
 }
