--- a/templates/index.html
+++ b/templates/index.html
@@ -7,28 +7,15 @@
         type = "image/x-icon">
     	<title>{{title}}</title>
 
-        <!-- css3 round -->
-        <!-- Vendor Prefixes -->
-        <div class="round">
-            Rounded corners.!
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#">COURSES</a></li>
+                <li><a href="#">DISCUSS</a></li>
+                <li><a href="#">TOP LEARNERS</a></li>
+                <li><a href="#">BLOG</a></li>
+            </ul>
+        </nav>
 
-        <!--Border radius -->
-        <div class="fillr">
-            Rounded Corners
-        </div>
 
-        <!-- only bottom rounded -->
-        <div class="bottomr">
-            Only Bottom Rounded
-        </div>
-
-        <div class="circle">
-            Circles
-        </div>
-
-        <div class="shady"></div>
-
-        <div class="blur"></div>
     </head>
 </html>
