--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,32 +1,25 @@
-body{
-	background: url("http://www.sololearn.com/images/bg2.jpg");
+.rad_grad{
+	float: left;
+	width: 300px;
+	height: 100px;
+	margin: 4px;
+	color: #FFF;
+	background: -moz-radial-gradient(center, circle, DeepSkyBlue, Black);
+}
+/*background: radial-gradient(position, shape or size, color-stops);*/
+
+.normal {
+	float: left;
+	width: 150px;
+	height: 200px;
+	color: #FFF;
+	background: -moz-radial-gradient(green, yellow, blue);
 }
 
-nav {
-	padding: 50px 0;
-	min-width: 500px;
-}
-
-nav ul {
-	background: linear-gradient(90 deg,
-		rgba(255, 255, 255, 0) 0%,
-		rgba(255, 255, 255, 0.2) 25%,
-		rgba(255, 255, 255, 0.2) 75%,
-		rgba(255, 255, 255, 0) 100%);
-
-	box-shadow: 0 0 25px rgba(0, 0, 0, 1.0),
-	inset 0 0 1px rgba(255, 255, 255, 0.6);
-}
-
-nav ul li {
-	display: inline-block;
-}
-
-nav ul li a {
-	padding: 10px;
-	color: #FFFFFF;
-	font-size: 18px;
-	font-family: Arial;
-	text-decoration: none;
-	display: block;
+.circle {
+	float: left;
+	width: 150px;
+	height: 200px;
+	color: #FFF;
+	background: -moz-radial-gradient(circle, green, yellow, blue);
 }
