--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,19 @@
         type = "image/x-icon">
     	<title>{{title}}</title>
 
-        <nav>
-            <ul>
-                <li><a href="#">COURSES</a></li>
-                <li><a href="#">DISCUSS</a></li>
-                <li><a href="#">TOP LEARNERS</a></li>
-                <li><a href="#">BLOG</a></li>
-            </ul>
-        </nav>
+        <!-- Radial Gradients 
+        <div class="rad_grad">
+            Radial Gradient :)
+        </div>-->
 
+        <!-- Setting the Shapes -->
+        <div class="normal">
+            Elipse(Default)
+        </div>
 
-    </head>
+        <div class="circle">
+            Circle
+        </div>
+
+        </head>
 </html>
